  Images, unused field removed
  Util.getGetMethod(), getSetMethod() added, (refactored from AbstractBeanValueLink)
  AbstractBeanValueLinks uses the above
  EntityUtil.EntityBeanMapper added, tested
  @Override annotation added on interface implementations
  Sonar run
  EntityUtilTest, minor improvements in toBean() and toEntity() tests
  WebStartServerTest added
  webserver.jar library updated
  WebStartServer, changed according to updated library version, removed main
  ServerUtil, added logging
  PropertyImpl, minor refactoring
  Unit test cleanup and refactoring
  WebStartServerTest, gives the server a moment to start
0.6.5
  TextInputPanel, added null check to constructor
  DateInputPanel, enabledState now linked to input field as well as button
  Some minor unit test improvements/refactorings
  DefaultApplicationModel, constructor performs null check on connectionProvider
  EntityApplicationModel.login(user) throws IllegalArgumentException if user is null
  EntityImpl.KeyImpl, added entityID to a couple of exceptions
  EntityUtil.EntityBeanMapper.toBeans() and toEntities() added
  EntityTablePanel.setTablePopupMenu() handles a null controlSet parameter
  EntityTablePanel.getPopupControls() documented
  ServerMonitor.connectServer() error messages improved
  DateUtil refactored, floors time fields in all returned dates, floorFields() and floorTimeFields() added, used throughout, tested
  SearchType bug fixed, renamed AT_LEAST and AT_MOST to LESS_THAN and GREATER_THAN respectively, these were incorrect according to the signs used
  DefaultColumnSearchModel, renamed a couple of methods mirroring the above changes
  DefaultColumnSearchModelTest.include() added
  Util.countLines() overloaded with excludePrefix
  Messages.SELECT_FILE and SELECT_DIRECTORY added
  UiUtil.selectFile() and selectDirectory() use the above
  UiUtil.selectDirectory() overloaded with dialogTitle parameter
  Messages_is_IS.properties UTF-8 encoding fixed