@@ -860,9 +860,7 @@ public final class Entities {
     public void validate(final Entity entity, final String propertyID, final int action) throws ValidationException {
       Util.rejectNullValue(entity, "entity");
       final Property property = entity.getProperty(propertyID);
-      final boolean isForeignKeyProperty = property instanceof Property.ColumnProperty
-              && ((Property.ColumnProperty) property).isForeignKeyProperty();
-      if (performNullValidation && !isForeignKeyProperty) {
+      if (performNullValidation && !(property instanceof Property.ForeignKeyProperty)) {
         performNullValidation(entity, property, action);
       }
       if (property.isNumerical()) {
@@ -893,18 +891,22 @@ public final class Entities {
     @Override
     public final void performNullValidation(final Entity entity, final Property property, final int action) throws NullValidationException {
       if (!isNullable(entity, property.getPropertyID()) && entity.isValueNull(property.getPropertyID())) {
+        Property exceptionProperty = property;
+        if (property instanceof Property.ColumnProperty && ((Property.ColumnProperty) property).isForeignKeyProperty()) {
+          exceptionProperty = ((Property.ColumnProperty) property).getForeignKeyProperty();
+        }
         if (action == INSERT) {
           final boolean columnPropertyWithoutDefaultValue = property instanceof Property.ColumnProperty && !((Property.ColumnProperty) property).columnHasDefaultValue();
           final boolean primaryKeyPropertyWithoutAutoGenerate = property instanceof Property.PrimaryKeyProperty &&
                   !getIdSource(entityID).isAutoGenerated();
-          if (property instanceof Property.ForeignKeyProperty || columnPropertyWithoutDefaultValue || primaryKeyPropertyWithoutAutoGenerate) {
-            throw new NullValidationException(property.getPropertyID(),
-                    FrameworkMessages.get(FrameworkMessages.PROPERTY_VALUE_IS_REQUIRED) + ": " + property);
+          if (columnPropertyWithoutDefaultValue || primaryKeyPropertyWithoutAutoGenerate) {
+            throw new NullValidationException(exceptionProperty.getPropertyID(),
+                    FrameworkMessages.get(FrameworkMessages.PROPERTY_VALUE_IS_REQUIRED) + ": " + exceptionProperty);
           }
         }
         else {
-          throw new NullValidationException(property.getPropertyID(),
-                  FrameworkMessages.get(FrameworkMessages.PROPERTY_VALUE_IS_REQUIRED) + ": " + property);
+          throw new NullValidationException(exceptionProperty.getPropertyID(),
+                  FrameworkMessages.get(FrameworkMessages.PROPERTY_VALUE_IS_REQUIRED) + ": " + exceptionProperty);
 
         }
       }
